# pathoflow

./: .dockergitignore  .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICES.md  README.md  debug_wsi.py  pyproject.toml  technical_report.md
experiments/: training_engine.py
src/pathoflow/: cli.py
src/pathoflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pathoflow/core/: mask.py  tiler.py  wsi.py
src/pathoflow/engine/: cnn.py  heatmap.py  interface.py
src/pathoflow/utils/: batching.py  logger.py
tests/: conftest.py  test_core.py
