[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathoflow"
version = "0.1.0"
description = "High-performance WSI inference engine"
requires-python = ">=3.11"
dependencies = [
    "openslide-python>=1.3.1",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    # Pinning PyTorch is critical for reproducibility
    "torch>=2.1.0", 
    "torchvision>=0.16.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]

[project.scripts]
pathoflow = "pathoflow.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]